--- a/WordleHelper/MainWindow.xaml
+++ b/WordleHelper/MainWindow.xaml
@@ -5,26 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordleHelper"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Wordle Helper by Billd Labs" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="83*"/>
+        </Grid.ColumnDefinitions>
         <TextBlock HorizontalAlignment="Left" Margin="54,30,0,0" Text="Letters" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <TextBox Name="Letter0" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="54,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16"/>
         <TextBox Name="Letter1" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="77,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16"/>
         <TextBox Name="Letter2" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="100,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16"/>
-        <TextBox Name="Letter3" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="123,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16"/>
-        <TextBox Name="Letter4" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="146,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16"/>
+        <TextBox Name="Letter3" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="123,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16" Grid.ColumnSpan="2"/>
+        <TextBox Name="Letter4" GotKeyboardFocus="TBGotFocus" MaxLength="1" HorizontalAlignment="Left" Margin="10,62,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="18" Height="16" Grid.Column="1"/>
         <Button Content="" Name="Button0" HorizontalAlignment="Left" Margin="54,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button0_Click" />
         <Button Content="" Name="Button1" HorizontalAlignment="Left" Margin="77,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button1_Click" />
         <Button Content="" Name="Button2" HorizontalAlignment="Left" Margin="100,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button2_Click" />
-        <Button Content="" Name="Button3" HorizontalAlignment="Left" Margin="123,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button3_Click" />
-        <Button Content="" Name="Button4" HorizontalAlignment="Left" Margin="146,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button4_Click" />
-        <DataGrid Name="PossibleWords" Margin="10,123,18,10" ItemsSource="{Binding}">
+        <Button Content="" Name="Button3" HorizontalAlignment="Left" Margin="123,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button3_Click" Grid.ColumnSpan="2" />
+        <Button Content="" Name="Button4" HorizontalAlignment="Left" Margin="10,83,0,0" VerticalAlignment="Top" Width="18" Background="White" Click="Button4_Click" Grid.Column="1" />
+        <DataGrid Name="PossibleWords" Margin="10,123,18,10" ItemsSource="{Binding}" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="wordCol" Header="Possible Words" Width="*" IsReadOnly="True" Binding="{Binding Path=.}"/>
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Submit" Name="SubmitButton" HorizontalAlignment="Left" Margin="196,83,0,0" VerticalAlignment="Top" Click="SubmitButton_Click"/>
-        <CheckBox Content="Potential Answers First (Resets Progress)" Name="AnswersFirst" HorizontalAlignment="Left" Margin="261,31,0,0" VerticalAlignment="Top" Checked="AnswersFirst_CheckedChanged" Unchecked="AnswersFirst_CheckedChanged"/>
+        <Button Content="Submit" Name="SubmitButton" HorizontalAlignment="Left" Margin="60,83,0,0" VerticalAlignment="Top" Click="SubmitButton_Click" Grid.Column="1"/>
+        <CheckBox Content="Potential Answers First (Resets Progress)" Name="AnswersFirst" HorizontalAlignment="Left" Margin="125,31,0,0" VerticalAlignment="Top" Checked="AnswersFirst_CheckedChanged" Unchecked="AnswersFirst_CheckedChanged" Grid.Column="1"/>
     </Grid>
 </Window>
